feat: Enhance website branding and UI elements
This commit updates the project name in package.json and metadata.json to "trinkets-and-beyond". It also refines the website title to "Trinkets and Beyond | Artisan Candles" for better SEO and clarity.

Several UI improvements have been made:
- Expanded Google Fonts imports to include bolder weights for "Playfair Display" and "Inter".
- Adjusted Tailwind CSS theme colors, introducing a 'gold' color and refining existing ones like 'cream', 'soft-pink', and 'dark-brown' for a more cohesive aesthetic.
- Updated animation configurations for 'slow-ping' and 'float-slow' to introduce subtle visual effects.
- Redesigned the `CandleCard` component with a larger border-radius on the container, updated hover effects for a more pronounced shadow, and refined the image scaling animation.
- Introduced a 'Sparkles' icon in the `Home` page and added parallax scrolling effects to the hero section, enhancing user engagement.
- Removed unused `BackgroundTexture` and `FloatingParticles` components from `Layout.tsx`, streamlining the codebase.
- Replaced the explicit `Flame` icon in `Layout.tsx` with a `ShoppingCart` icon, suggesting a potential shift in focus or preparation for e-commerce features.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-trinkets-and-beyond",
+  "name": "trinkets-and-beyond",
   "private": true,
   "version": "0.0.0",
   "type": "module",
