--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19",
+    "react-dom": "19",
     "react-router-dom": "6.22.3",
     "framer-motion": "11.0.8",
     "lucide-react": "0.344.0",
