--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19",
-    "react-dom": "19",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-router-dom": "6.22.3",
-    "framer-motion": "11.0.8",
+    "framer-motion": "11.11.17",
     "lucide-react": "0.344.0",
     "@supabase/supabase-js": "2.39.7"
   },
