--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-router-dom": "6.22.3",
     "framer-motion": "11.0.8",
     "lucide-react": "0.454.0",
-    "@supabase/supabase-js": "2.39.7"
+    "@supabase/supabase-js": "2.39.7",
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
