--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "6.22.3",
-    "framer-motion": "11.0.8",
-    "lucide-react": "0.454.0",
-    "@supabase/supabase-js": "2.39.7",
-    "vite": "^7.3.0",
-    "@vitejs/plugin-react": "^5.1.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.454.0",
+    "@supabase/supabase-js": "^2.39.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^5.0.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0"
   }
 }
